:art: new indicator in options

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -62,7 +62,7 @@
             <input type="radio" name="ts" id="absolute_us"><label data-lang="time_absolute_us" for="absolute_us">Absolute US Style<small>mm/dd/yy hh:mm</small></label>
           </li>
           <li>
-            <input type="radio" name="ts" data-ghost id="custom"><label data-lang="time_custom" for="custom">Custom format (<a target="_blank" href="https://github.com/taylorhakes/fecha#formatting-tokens">Formatting help</a>)</label>
+            <input type="radio" name="ts" data-ghost id="custom"><label data-new-feat data-lang="time_custom" for="custom">Custom format (<a target="_blank" href="https://github.com/taylorhakes/fecha#formatting-tokens">Formatting help</a>)</label>
             <ul>
               <li>
                 <label class="left-label" for="custom_ts.short" data-lang="time_short">Short</label> <input disabled type="text" name="custom_ts.short">
@@ -120,7 +120,7 @@
         <ul>
           <li>
             <input type="checkbox" name="css.bigger_emojis" id="bigger_emojis">
-            <label for="bigger_emojis" data-lang="css_bigger_emojis">Bigger emojis in tweets</label>
+            <label for="bigger_emojis" data-lang="css_bigger_emojis" data-new-feat >Bigger emojis in tweets</label>
           </li>
           <li>
             <input type="checkbox" name="css.round_pic" id="round_pic">
@@ -128,23 +128,23 @@
           </li>
           <li>
             <input type="checkbox" name="css.show_verified" id="show_verified">
-            <label for="show_verified" data-lang="css_show_verified">Show "verified" badge</label>
+            <label for="show_verified" data-lang="css_show_verified" data-new-feat>Show "verified" badge</label>
           </li>
           <li>
             <input type="checkbox" name="css.hide_context" id="hide_context">
-            <label for="hide_context" data-lang="css_hide_context">Hide "In reply to" label on mentions</label>
+            <label for="hide_context" data-lang="css_hide_context" data-new-feat>Hide "In reply to" label on mentions</label>
           </li>
           <li>
             <input type="checkbox" name="css.actions_on_right" id="actions_on_right">
-            <label for="actions_on_right" data-lang="css_actions_on_right">Show tweet actions on the right</label>
+            <label for="actions_on_right" data-lang="css_actions_on_right" data-new-feat>Show tweet actions on the right</label>
           </li>
           <li>
             <input type="checkbox" name="css.actions_on_hover" id="actions_on_hover">
-            <label for="actions_on_hover" data-lang="css_actions_on_hover">Show tweet actions on hover</label>
+            <label for="actions_on_hover" data-lang="css_actions_on_hover" data-new-feat>Show tweet actions on hover</label>
           </li>
           <li>
             <input type="checkbox" name="no_hearts" id="no_hearts">
-            <label for="no_hearts" data-lang="no_hearts">Show stars instead of hearts</label>
+            <label for="no_hearts" data-lang="no_hearts" data-new-feat>Show stars instead of hearts</label>
           </li>
           <li>
             <input type="checkbox" name="rtl_text_style" id="rtl_text_style">
@@ -199,7 +199,7 @@
           </li>
           <li>
             <input type="checkbox" name="stop_gifs" id="stop_gifs">
-            <label for="stop_gifs" data-lang="stop_autoplay_gifs">Don't autoplay GIFs in columns</label>
+            <label for="stop_gifs" data-lang="stop_autoplay_gifs" data-new-feat>Don't autoplay GIFs in columns</label>
           </li>
         </ul>
       </div>
@@ -226,7 +226,7 @@
           </li>
           <li>
             <input type="checkbox" name="css.hide_url_thumb" id="hide_url_thumb">
-            <label for="hide_url_thumb" data-lang="css_hide_url_thumb">Hide link related to thumbnails in tweet (à la Twitter mobile)</label>
+            <label for="hide_url_thumb" data-lang="css_hide_url_thumb" data-new-feat>Hide link related to thumbnails in tweet (à la Twitter mobile)</label>
           </li>
           <li>
             <input type="checkbox" name="css.no_col_icns" id="no_col_icns">
