:art: duplicate save button for safety

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -109,6 +109,7 @@
           <span class="date">01:41 pm</span>
         </div>
       </div>
+      <button class="save-button" disabled data-lang="save_no">No changes</button>
     </section>
 
     <section class="content-block" id="tweetsDisplay">
@@ -178,6 +179,7 @@
           <span class="verified -hidden"></span>
         </div>
       </div>
+      <button class="save-button" disabled data-lang="save_no">No changes</button>
     </section>
 
     <section class="content-block" id="btdContent">
@@ -211,6 +213,7 @@
           <!-- Will be populated by JS -->
         </ul>
       </div>
+      <button class="save-button" disabled data-lang="save_no">No changes</button>
     </section>
 
     <section class="content-block" id="visual">
@@ -242,6 +245,7 @@
           </li>
         </ul>
       </div>
+      <button class="save-button" disabled data-lang="save_no">No changes</button>
     </section>
 
     <section class="content-block" id="onInstall">
@@ -260,6 +264,7 @@
 
         <p data-lang="btd_follow">You should follow <a href="https://twitter.com/BetterTDeck">@BetterTDeck</a> on Twitter for support, news and trivia about Better TweetDeck!</p>
       </div>
+      <button class="save-button" disabled data-lang="save_no">No changes</button>
     </section>
 
     <section class="content-block" id="debug">
@@ -279,6 +284,7 @@
 
         <pre class="settings-pre"><code class="settings-dump language-json"></code></pre>
       </div>
+      <button class="save-button" disabled data-lang="save_no">No changes</button>
     </section>
 
     <section class="content-block" id="credits">
@@ -318,6 +324,7 @@
           </li>
         </ul>
       </div>
+      <button class="save-button" disabled data-lang="save_no">No changes</button>
     </section>
   </main>
 </div>
