add setting to hide scrollbars or not

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -236,6 +236,9 @@
             <label for="no_col_icns" data-lang="css_no_col_icns">Hide icons in columns headers</label>
           </li>
           <li>
+            <input type="checkbox" name="css.no_scrollbars" id="no_scrollbars">
+          </li>
+          <li>
             <input type="checkbox" name="css.small_icns_compose" id="small_icns_compose">
             <label for="small_icns_compose" data-lang="css_small_icns_compose">Icons are smaller in the Compose panel</label>
           </li>
