--- a/src/options/options.html
+++ b/src/options/options.html
@@ -237,6 +237,7 @@
           </li>
           <li>
             <input type="checkbox" name="css.no_scrollbars" id="no_scrollbars">
+            <label for="no_scrollbars" data-lang="css_no_scrollbars" data-new-feat>Hide scrollbars</label>
           </li>
           <li>
             <input type="checkbox" name="css.small_icns_compose" id="small_icns_compose">
