:ledger: donate section in settings

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -33,6 +33,7 @@
       <nav class="sidebar-nav">
         <a href="#onInstall" class="nav-item" data-lang="sec_welcome">Welcome</a>
         <a href="#credits" class="nav-item" data-lang="sec_credits">Credits / About</a>
+        <a href="#donate" class="nav-item" data-lang="sec_donate">Donate</a>
         <a href="#debug" class="nav-item" data-lang="sec_debug">Debug Infos</a>
       </nav>
 
@@ -40,7 +41,6 @@
       <nav class="sidebar-nav">
         <a href="https://twitter.com/BetterTDeck" class="nav-item">@BetterTDeck</a>
         <a href="https://github.com/eramdam/BetterTweetDeck" class="nav-item">GitHub</a>
-        <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=XK9SQ6ZDE9UF2&lc=US&item_name=Damien%20Erambert&currency_code=USD&bn=PP%2dDonationsBF%3abtn_donate_SM%2egif%3aNonHosted" class="nav-item" data-lang="sec_donate">Donate</a>
       </nav>
     </div>
   </aside>
@@ -289,6 +289,26 @@
         <pre class="settings-pre"><code class="settings-dump language-json"></code></pre>
       </div>
       <button class="save-button" disabled data-lang="save_no">No changes</button>
+    </section>
+
+    <section class="content-block" id="donate">
+      <h2 class="section-title">Donate</h2>
+
+      <div class="settings-section">
+        <h5 data-lang="donate_title">Help me maintain Better TweetDeck!</h5>
+
+        <p data-lang="donate_p1"></p>
+        <p data-lang="donate_p2"></p>
+        <p data-lang="donate_p3"></p>
+        <ul>
+          <li>
+            <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=XK9SQ6ZDE9UF2&lc=US&item_name=Damien%20Erambert&currency_code=USD&bn=PP%2dDonationsBF%3abtn_donate_SM%2egif%3aNonHosted" data-lang="sec_donate">Paypal</a>
+          </li>
+          <li>
+            <a href="https://patreon.com/eramdam">Patreon</a>
+          </li>
+        </ul>
+      </div>
     </section>
 
     <section class="content-block" id="credits">
