:cookie: option to hide bg modals or not

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -240,6 +240,10 @@
             <label for="no_scrollbars" data-lang="css_no_scrollbars" data-new-feat>Hide scrollbars</label>
           </li>
           <li>
+            <input type="checkbox" name="css.no_bg_modal" id="no_bg_modal">
+            <label for="no_bg_modal" data-lang="css_no_bg_modal" data-new-feat>Hide background behind fullscreen previews</label>
+          </li>
+          <li>
             <input type="checkbox" name="css.small_icns_compose" id="small_icns_compose">
             <label for="small_icns_compose" data-lang="css_small_icns_compose">Icons are smaller in the Compose panel</label>
           </li>
