--- a/src/options/options.html
+++ b/src/options/options.html
@@ -33,6 +33,7 @@
       <nav class="sidebar-nav">
         <a href="#onInstall" class="nav-item" data-lang="sec_welcome">Welcome</a>
         <a href="#credits" class="nav-item" data-lang="sec_credits">Credits / About</a>
+        <a href="#changelog" class="nav-item" data-lang="sec_changelog">Changelog</a>
         <a href="#donate" class="nav-item" data-lang="sec_donate">Donate</a>
         <a href="#debug" class="nav-item" data-lang="sec_debug">Debug Infos</a>
       </nav>
@@ -292,7 +293,14 @@
 
         <pre class="settings-pre"><code class="settings-dump language-json"></code></pre>
       </div>
-      <button class="save-button" disabled data-lang="save_no">No changes</button>
+    </section>
+
+    <section class="content-block" id="changelog">
+      <h2 class="section-title" data-lang="sec_changelog">Changelog</h2>
+
+      <div class="settings-section changelog">
+
+      </div>
     </section>
 
     <section class="content-block" id="donate">
