options for slimmer scrollbars

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -241,6 +241,10 @@
             <label for="no_scrollbars" data-lang="css_no_scrollbars" data-new-feat>Hide scrollbars</label>
           </li>
           <li>
+            <input type="checkbox" name="css.slim_scrollbars" id="slim_scrollbars">
+            <label for="slim_scrollbars" data-lang="css_slim_scrollbars" data-new-feat>Thinner scrollbars</label>
+          </li>
+          <li>
             <input type="checkbox" name="css.no_bg_modal" id="no_bg_modal">
             <label for="no_bg_modal" data-lang="css_no_bg_modal" data-new-feat>Hide background behind fullscreen previews</label>
           </li>
