--- a/src/options/options.html
+++ b/src/options/options.html
@@ -75,7 +75,7 @@
           </li>
 
           <li>
-            <input type="checkbox" name="full_aft_24" id="full_aft_24"><label data-lang="time_full24" for="full_aft_24">Display full date after 24h</label>
+            <input type="checkbox" name="full_aft_24" id="full_aft_24"><label data-lang="time_full24" for="full_aft_24">Display full date after 24h <small>Applies only for non-relative timestamps</small></label>
           </li>
         </ul>
       </div>
