:cookie: add feature to stop gifs in PP in columns

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -204,6 +204,10 @@
             <input type="checkbox" name="stop_gifs" id="stop_gifs">
             <label for="stop_gifs" data-lang="stop_autoplay_gifs" data-new-feat>Don't autoplay GIFs in columns</label>
           </li>
+          <li>
+            <input type="checkbox" name="no_gif_pp" id="no_gif_pp">
+            <label for="no_gif_pp" data-lang="no_gif_pp" data-new-feat>No GIFs in profile pictures in columns</label>
+          </li>
         </ul>
       </div>
 
