--- a/src/options/options.html
+++ b/src/options/options.html
@@ -261,7 +261,7 @@
             <label for="gray_icns_notifs" data-lang="css_gray_icns_notifs">Notifications icons are in grayscale</label>
           </li>
           <li>
-            <input type="checkbox" name="custom_columns_width.enabled" id="column_width" data-ghost><label for="column_width" data-lang="custom_width_columns">Custom width for columns:</label>
+            <input type="checkbox" name="custom_columns_width.enabled" id="column_width" data-ghost><label for="column_width" data-lang="custom_width_columns" data-new-feat>Custom width for columns:</label>
             <ul>
               <li>
                 <input disabled type="number" name="custom_columns_width.size" id="column_size" value="250" min="230" max="450"><label for="column_size" data-lang="custom_width_size">Width (in pixels)</label>
