:wrench: column width w/ CSS values instead of integer

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -264,7 +264,7 @@
             <input type="checkbox" name="custom_columns_width.enabled" id="column_width" data-ghost><label for="column_width" data-lang="custom_width_columns" data-new-feat>Custom width for columns:</label>
             <ul>
               <li>
-                <input disabled type="number" name="custom_columns_width.size" id="column_size" value="250" min="230" max="450"><label for="column_size" data-lang="custom_width_size">Width (in pixels)</label>
+                <input disabled type="text" name="custom_columns_width.size" id="column_size"><label for="column_size" data-lang="custom_width_size">Width (in pixels)</label>
               </li>
             </ul>
           </li>
