--- a/src/options/options.html
+++ b/src/options/options.html
@@ -261,6 +261,10 @@
             <label for="gray_icns_notifs" data-lang="css_gray_icns_notifs">Notifications icons are in grayscale</label>
           </li>
           <li>
+            <input type="checkbox" name="css.collapse_dms" id="collapse_dms">
+            <label for="bigger_emojis" data-lang="css_collapse_dms" data-new-feat >Collapse read direct messages</label>
+          </li>
+          <li>
             <input type="checkbox" name="custom_columns_width.enabled" id="column_width" data-ghost><label for="column_width" data-lang="custom_width_columns" data-new-feat>Custom width for columns:</label>
             <ul>
               <li>
