--- a/src/options/options.html
+++ b/src/options/options.html
@@ -324,8 +324,17 @@
 
     <section class="content-block" id="donate">
       <h2 class="section-title">Donate</h2>
-
       <div class="settings-section">
+        <h5>If you're in the US, I'd rather have you donate to one of those charities instead.</h5>
+        
+        <ul>
+          <li><a href="https://action.aclu.org/donate-aclu?ms=web_horiz_nav_hp">American Civil Liberties Union</a></li>
+          <li><a href="https://secure3.convio.net/cfrr/site/Donation2;jsessionid=97A4C7A9488B5DDF3450546DE1123DB2.app347a?1380.donation=form1&df_id=1380&web&_ga=1.145398384.513337705.1476995534">Center for Reproductive Rights</a></li>
+          <li><a href="https://www.lambdalegal.org/donate">Lambda Legal</a></li>
+          <li><a href="https://secure.ppaction.org/site/Donation2?df_id=12913&12913.donation=form1&_ga=1.38484843.997121566.1477408976">Planned Parenthood</a></li>
+          <li><a href="https://jezebel.com/a-list-of-pro-women-pro-immigrant-pro-earth-anti-big-1788752078">And many more</a></li>
+        </ul>
+
         <h5 data-lang="donate_title">Help me maintain Better TweetDeck!</h5>
 
         <p data-lang="donate_p1"></p>
