--- a/src/options/options.html
+++ b/src/options/options.html
@@ -384,7 +384,7 @@
             <a href="https://github.com/eramdam/BetterTweetDeck" data-lang="credits_source">Source code on GitHub</a>
           </li>
           <li>
-            <a href="http://erambert.me/" data-lang="credits_author">Author's website</a>
+            <a href="http://erambert.me/" data-lang="credits_author_website">Author's website</a>
           </li>
         </ul>
       </div>
