--- a/src/options/options.html
+++ b/src/options/options.html
@@ -262,7 +262,7 @@
           </li>
           <li>
             <input type="checkbox" name="css.collapse_dms" id="collapse_dms">
-            <label for="bigger_emojis" data-lang="css_collapse_dms" data-new-feat >Collapse read direct messages</label>
+            <label for="collapse_dms" data-lang="css_collapse_dms" data-new-feat >Collapse read direct messages</label>
           </li>
           <li>
             <input type="checkbox" name="custom_columns_width.enabled" id="column_width" data-ghost><label for="column_width" data-lang="custom_width_columns" data-new-feat>Custom width for columns:</label>
@@ -384,7 +384,7 @@
             <a href="https://github.com/eramdam/BetterTweetDeck" data-lang="credits_source">Source code on GitHub</a>
           </li>
           <li>
-            <a href="http://erambert.me/" data-lang="credits_author">Author's website</a>
+            <a href="http://erambert.me/" data-lang="credits_author_website">Author's website</a>
           </li>
         </ul>
       </div>
