:cookie: add a badge to show thumbnails' source

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -204,6 +204,10 @@
             <input type="checkbox" name="no_gif_pp" id="no_gif_pp">
             <label for="no_gif_pp" data-lang="no_gif_pp" data-new-feat>No GIFs in profile pictures in columns</label>
           </li>
+          <li>
+            <input type="checkbox" name="css.show_provider_indicator" id="show_provider_indicator">
+            <label for="show_provider_indicator" data-lang="css_show_provider_indicator" data-new-feat>Show thumbnails source on top of them</label>
+          </li>
         </ul>
       </div>
 
