:cookie: add a setting to hide RT/like indicators on top of tweets

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -149,6 +149,10 @@
             <label for="no_hearts" data-lang="no_hearts" data-new-feat>Show stars instead of hearts</label>
           </li>
           <li>
+            <input type="checkbox" name="css.hide_like_rt_indicators" id="hide_like_rt_indicators">
+            <label for="hide_like_rt_indicators" data-lang="css_hide_like_rt_indicators" data-new-feat>Hide Like/RT indicators on top of tweets</label>
+          </li>
+          <li>
             <input type="checkbox" name="flash_tweets.enabled" id="flash" data-ghost><label for="flash" data-lang="flash_tweets">Make tweets flash in:</label>
             <ul>
               <li>
