:cookie: can revert to old replies

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -233,6 +233,10 @@
 
         <ul>
           <li>
+            <input type="checkbox" name="old_replies" id="old_replies">
+            <label for="old_replies" data-lang="old_replies" data-new-feat>Revert to the old replies style (pre 03/30/2017)</label>
+          </li>
+          <li>
             <input type="checkbox" name="css.minimal_mode" id="minimal_mode">
             <label for="minimal_mode" data-lang="css_minimal_mode">Enable the "Minimal" mode</label>
           </li>
