:cookie: can revert to old search

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -237,6 +237,10 @@
             <label for="old_replies" data-lang="old_replies" data-new-feat>Revert to the old replies style (pre 03/30/2017)</label>
           </li>
           <li>
+            <input type="checkbox" name="old_search" id="old_search">
+            <label for="old_search" data-lang="old_search" data-new-feat>Revert to the old search system (no columns for searches!)</label>
+          </li>
+          <li>
             <input type="checkbox" name="css.minimal_mode" id="minimal_mode">
             <label for="minimal_mode" data-lang="css_minimal_mode">Enable the "Minimal" mode</label>
           </li>
