:ledger: add @no-boot-device to credits

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -372,7 +372,12 @@
 
         <h5 data-lang="credits_contribs">Contributors</h5>
 
-        <ul class="settings-contributors"></ul>
+        <ul class="settings-contributors">
+          <li>
+            <a href="https://github.com/no-boot-device" target="_blank">no-boot-device</a>
+            <small>That Old Replies Trick</small>
+          </li>
+        </ul>
 
         <h5 data-lang="credits_rsrc">Ressources used</h5>
 
