:sparkles: :bug: add streaming setting and experimental section
For whatever reason this is causing a lock inside TweetDeck that makes
Home timelines poll.

Haven't found the issue, even with countless different tries.

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -233,14 +233,6 @@
 
         <ul>
           <li>
-            <input type="checkbox" name="old_replies" id="old_replies">
-            <label for="old_replies" data-lang="old_replies" data-new-feat>Revert to the old replies style (pre 03/30/2017)</label>
-          </li>
-          <li>
-            <input type="checkbox" name="old_search" id="old_search">
-            <label for="old_search" data-lang="old_search" data-new-feat>Revert to the old search system (no columns for searches!)</label>
-          </li>
-          <li>
             <input type="checkbox" name="css.minimal_mode" id="minimal_mode">
             <label for="minimal_mode" data-lang="css_minimal_mode">Enable the "Minimal" mode</label>
           </li>
@@ -283,6 +275,24 @@
                 <input disabled type="text" name="custom_columns_width.size" id="column_size"><label for="column_size" data-lang="custom_width_size">Width (in pixels)</label>
               </li>
             </ul>
+          </li>
+        </ul>
+      </div>
+      <div class="settings-section">
+        <h5 data-lang="sec_experimental">Experimental</h5>
+
+        <ul>
+          <li>
+            <input type="checkbox" name="old_replies" id="old_replies">
+            <label for="old_replies" data-lang="old_replies" data-new-feat>Revert to the old replies style (pre 03/30/2017)</label>
+          </li>
+          <li>
+            <input type="checkbox" name="old_search" id="old_search">
+            <label for="old_search" data-lang="old_search" data-new-feat>Revert to the old search system (no columns for searches!)</label>
+          </li>
+          <li>
+            <input type="checkbox" name="streaming" id="streaming">
+            <label for="streaming" data-lang="streaming" data-new-feat>Re-enable streaming for the notifications column</label>
           </li>
         </ul>
       </div>
