:bug: disable scrollbar-related settings on Firefox

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -252,11 +252,11 @@
             <input type="checkbox" name="css.no_col_icns" id="no_col_icns">
             <label for="no_col_icns" data-lang="css_no_col_icns">Hide icons in columns headers</label>
           </li>
-          <li>
+          <li data-hidden-firefox>
             <input type="checkbox" name="css.no_scrollbars" id="no_scrollbars">
             <label for="no_scrollbars" data-lang="css_no_scrollbars" data-new-feat>Hide scrollbars</label>
           </li>
-          <li>
+          <li data-hidden-firefox>
             <input type="checkbox" name="css.slim_scrollbars" id="slim_scrollbars">
             <label for="slim_scrollbars" data-lang="css_slim_scrollbars" data-new-feat>Thinner scrollbars</label>
           </li>
