--- a/src/options/options.html
+++ b/src/options/options.html
@@ -291,6 +291,10 @@
             <label for="collapse_dms" data-lang="css_collapse_dms" data-new-feat >Collapse read direct messages</label>
           </li>
           <li>
+            <input type="checkbox" name="css.system_fonts" id="system_fonts">
+            <label for="system_fonts" data-lang="css_system_fonts" data-new-feat >Use the system font in the UI</label>
+          </li>
+          <li>
             <input type="checkbox" name="custom_columns_width.enabled" id="column_width" data-ghost><label for="column_width" data-lang="custom_width_columns" data-new-feat>Custom width for columns:</label>
             <ul>
               <li>
