--- a/src/options/options.html
+++ b/src/options/options.html
@@ -201,6 +201,10 @@
             <input type="checkbox" name="css.show_provider_indicator" id="show_provider_indicator">
             <label for="show_provider_indicator" data-lang="css_show_provider_indicator" data-new-feat>Show thumbnails source on top of them</label>
           </li>
+          <li>
+            <input type="checkbox" name="regex_filter" id="regex_filter">
+            <label for="regex_filter" data-lang="regex_filter" data-new-feat>Enable regular expression support in Mute filters</label>
+          </li>
         </ul>
       </div>
 
