--- a/src/options/options.html
+++ b/src/options/options.html
@@ -209,6 +209,14 @@
       </div>
 
       <div class="settings-section">
+        <h5 data-lang="regex_filter_notice_heading">Notice for regular expression filters</h5>
+
+        <p data-lang="regex_filter_notice_text">
+          Due to the way TweetDeck's filtering works, expressions are not case sensitive!
+        </p>
+      </div>  
+
+      <div class="settings-section">
         <h5 data-lang="thumbnails_from">Display thumbnails from:</h5>
 
         <ul class="settings-thumbnails-providers-list">
