Add feature to enable regex in filters (#179)
* :cookie: :sparkles: Add feature to enable regex support in filters

* :wrench: fix lint errors

* :wrench: changes

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -201,8 +201,20 @@
             <input type="checkbox" name="css.show_provider_indicator" id="show_provider_indicator">
             <label for="show_provider_indicator" data-lang="css_show_provider_indicator" data-new-feat>Show thumbnails source on top of them</label>
           </li>
+          <li>
+            <input type="checkbox" name="regex_filter" id="regex_filter">
+            <label for="regex_filter" data-lang="regex_filter" data-new-feat>Enable regular expression support in Mute filters</label>
+          </li>
         </ul>
       </div>
+
+      <div class="settings-section">
+        <h5 data-lang="regex_filter_notice_heading">Notice for regular expression filters</h5>
+
+        <p data-lang="regex_filter_notice_text">
+          Due to the way TweetDeck's filtering works, expressions are not case sensitive!
+        </p>
+      </div>  
 
       <div class="settings-section">
         <h5 data-lang="thumbnails_from">Display thumbnails from:</h5>
