--- a/src/options/options.html
+++ b/src/options/options.html
@@ -204,17 +204,10 @@
           <li>
             <input type="checkbox" name="regex_filter" id="regex_filter">
             <label for="regex_filter" data-lang="regex_filter" data-new-feat>Enable regular expression support in Mute filters</label>
+            <br /><small data-lang="regex_filter_notice_text">Due to the way TweetDeck's filtering works, expressions are not case sensitive!</small>
           </li>
         </ul>
       </div>
-
-      <div class="settings-section">
-        <h5 data-lang="regex_filter_notice_heading">Notice for regular expression filters</h5>
-
-        <p data-lang="regex_filter_notice_text">
-          Due to the way TweetDeck's filtering works, expressions are not case sensitive!
-        </p>
-      </div>  
 
       <div class="settings-section">
         <h5 data-lang="thumbnails_from">Display thumbnails from:</h5>
