:wrench; make settings for favstar/mute hashtags

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -195,16 +195,24 @@
           </li>
           <li>
             <input type="checkbox" name="no_gif_pp" id="no_gif_pp">
-            <label for="no_gif_pp" data-lang="no_gif_pp" data-new-feat>No GIFs in profile pictures in columns</label>
+            <label for="no_gif_pp" data-lang="no_gif_pp">No GIFs in profile pictures in columns</label>
           </li>
           <li>
             <input type="checkbox" name="css.show_provider_indicator" id="show_provider_indicator">
-            <label for="show_provider_indicator" data-lang="css_show_provider_indicator" data-new-feat>Show thumbnails source on top of them</label>
+            <label for="show_provider_indicator" data-lang="css_show_provider_indicator">Show thumbnails source on top of them</label>
           </li>
           <li>
             <input type="checkbox" name="regex_filter" id="regex_filter">
             <label for="regex_filter" data-lang="regex_filter" data-new-feat>Enable regular expression support in Mute filters</label>
             <br /><small data-lang="regex_filter_notice_text">Due to the way TweetDeck's filtering works, expressions are not case sensitive!</small>
+          </li>
+          <li>
+            <input type="checkbox" name="favstar_item" id="favstar_item">
+            <label for="favstar_item" data-lang="favstar_item" data-new-feat>Add a "Show in Favstar" item in tweets' menu</label>
+          </li>
+          <li>
+            <input type="checkbox" name="mute_hashtags" id="mute_hashtags">
+            <label for="mute_hashtags" data-lang="mute_hashtags" data-new-feat>Add shortcuts to mute #hashtags in tweets' menu</label>
           </li>
         </ul>
       </div>
