:ledger: remove a bunch of "new" badges from the settings page

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -64,7 +64,7 @@
             <input type="radio" name="ts" id="absolute_us"><label data-lang="time_absolute_us" for="absolute_us">Absolute US Style<small>mm/dd/yy hh:mm</small></label>
           </li>
           <li>
-            <input type="radio" name="ts" data-ghost id="custom"><label data-new-feat data-lang="time_custom" for="custom">Custom format (<a target="_blank" href="https://github.com/taylorhakes/fecha#formatting-tokens">Formatting help</a>)</label>
+            <input type="radio" name="ts" data-ghost id="custom"><label data-lang="time_custom" for="custom">Custom format (<a target="_blank" href="https://github.com/taylorhakes/fecha#formatting-tokens">Formatting help</a>)</label>
             <ul>
               <li>
                 <label class="left-label" for="custom_ts.short" data-lang="time_short">Short</label> <input disabled type="text" name="custom_ts.short">
@@ -123,7 +123,7 @@
         <ul>
           <li>
             <input type="checkbox" name="css.bigger_emojis" id="bigger_emojis">
-            <label for="bigger_emojis" data-lang="css_bigger_emojis" data-new-feat >Bigger emojis in tweets</label>
+            <label for="bigger_emojis" data-lang="css_bigger_emojis">Bigger emojis in tweets</label>
           </li>
           <li>
             <input type="checkbox" name="css.round_pic" id="round_pic">
@@ -131,27 +131,27 @@
           </li>
           <li>
             <input type="checkbox" name="css.show_verified" id="show_verified">
-            <label for="show_verified" data-lang="css_show_verified" data-new-feat>Show "verified" badge</label>
+            <label for="show_verified" data-lang="css_show_verified">Show "verified" badge on top of avatars</label>
           </li>
           <li>
             <input type="checkbox" name="css.hide_context" id="hide_context">
-            <label for="hide_context" data-lang="css_hide_context" data-new-feat>Hide "In reply to" label on mentions</label>
+            <label for="hide_context" data-lang="css_hide_context">Hide "In reply to" label on mentions</label>
           </li>
           <li>
             <input type="checkbox" name="css.actions_on_right" id="actions_on_right">
-            <label for="actions_on_right" data-lang="css_actions_on_right" data-new-feat>Show tweet actions on the right</label>
+            <label for="actions_on_right" data-lang="css_actions_on_right">Show tweet actions on the right</label>
           </li>
           <li>
             <input type="checkbox" name="css.actions_on_hover" id="actions_on_hover">
-            <label for="actions_on_hover" data-lang="css_actions_on_hover" data-new-feat>Show tweet actions on hover</label>
+            <label for="actions_on_hover" data-lang="css_actions_on_hover">Show tweet actions on hover</label>
           </li>
           <li>
             <input type="checkbox" name="no_hearts" id="no_hearts">
-            <label for="no_hearts" data-lang="no_hearts" data-new-feat>Show stars instead of hearts</label>
+            <label for="no_hearts" data-lang="no_hearts">Show stars instead of hearts</label>
           </li>
           <li>
             <input type="checkbox" name="css.hide_like_rt_indicators" id="hide_like_rt_indicators">
-            <label for="hide_like_rt_indicators" data-lang="css_hide_like_rt_indicators" data-new-feat>Hide Like/RT indicators on top of tweets</label>
+            <label for="hide_like_rt_indicators" data-lang="css_hide_like_rt_indicators">Hide Like/RT indicators on top of tweets</label>
           </li>
           <li>
             <input type="checkbox" name="flash_tweets.enabled" id="flash" data-ghost><label for="flash" data-lang="flash_tweets">Make tweets flash in:</label>
@@ -281,15 +281,15 @@
           </li>
           <li data-hidden-firefox>
             <input type="checkbox" name="css.no_scrollbars" id="no_scrollbars">
-            <label for="no_scrollbars" data-lang="css_no_scrollbars" data-new-feat>Hide scrollbars</label>
+            <label for="no_scrollbars" data-lang="css_no_scrollbars">Hide scrollbars</label>
           </li>
           <li data-hidden-firefox>
             <input type="checkbox" name="css.slim_scrollbars" id="slim_scrollbars">
-            <label for="slim_scrollbars" data-lang="css_slim_scrollbars" data-new-feat>Thinner scrollbars</label>
+            <label for="slim_scrollbars" data-lang="css_slim_scrollbars">Thinner scrollbars</label>
           </li>
           <li>
             <input type="checkbox" name="css.no_bg_modal" id="no_bg_modal">
-            <label for="no_bg_modal" data-lang="css_no_bg_modal" data-new-feat>Hide background behind fullscreen previews</label>
+            <label for="no_bg_modal" data-lang="css_no_bg_modal">Hide background behind fullscreen previews</label>
           </li>
           <li>
             <input type="checkbox" name="css.small_icns_compose" id="small_icns_compose">
@@ -301,11 +301,11 @@
           </li>
           <li>
             <input type="checkbox" name="css.collapse_dms" id="collapse_dms">
-            <label for="collapse_dms" data-lang="css_collapse_dms" data-new-feat >Collapse read direct messages</label>
+            <label for="collapse_dms" data-lang="css_collapse_dms" data-new-feat>Collapse read direct messages</label>
           </li>
           <li>
             <input type="checkbox" name="css.system_fonts" id="system_fonts">
-            <label for="system_fonts" data-lang="css_system_fonts" data-new-feat >Use the system font in the UI</label>
+            <label for="system_fonts" data-lang="css_system_fonts" data-new-feat>Use the system font in the UI</label>
           </li>
           <li>
             <input type="checkbox" name="custom_columns_width.enabled" id="column_width" data-ghost><label for="column_width" data-lang="custom_width_columns" data-new-feat>Custom width for columns:</label>
