:ledger: Adjust copy of the minimal setting

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -269,7 +269,7 @@
           </li>
           <li>
             <input type="checkbox" name="css.minimal_mode" id="minimal_mode">
-            <label for="minimal_mode" data-lang="css_minimal_mode">Enable the "Minimal" mode</label>
+            <label for="minimal_mode" data-lang="css_minimal_mode">Enable the "Minimal" theme</label>
           </li>
           <li>
             <input type="checkbox" name="css.hide_url_thumb" id="hide_url_thumb">
