:ledger: improve copy of some settings

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -293,7 +293,7 @@
           </li>
           <li>
             <input type="checkbox" name="css.small_icns_compose" id="small_icns_compose">
-            <label for="small_icns_compose" data-lang="css_small_icns_compose">Icons are smaller in the Compose panel</label>
+            <label for="small_icns_compose" data-lang="css_small_icns_compose">Make buttons smaller in the Compose panel</label>
           </li>
           <li>
             <input type="checkbox" name="css.gray_icns_notifs" id="gray_icns_notifs">
