:cookie: add a setting to change tab's title when unread stuff

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -190,6 +190,10 @@
       <div class="settings-section">
         <ul>
           <li>
+            <input type="checkbox" name="update_title_on_notifications" id="update_title_on_notifications">
+            <label for="update_title_on_notifications" data-lang="update_title_on_notifications">Change tab's title when a new tweet/message is unread</label>
+          </li>
+          <li>
             <input type="checkbox" name="no_tco" id="no_tco">
             <label for="no_tco" data-lang="no_tco">Remove t.co redirection on links</label>
           </li>
